--- a/css/style.css
+++ b/css/style.css
@@ -1829,3 +1829,31 @@ strong {
     display: flex;
     flex-direction: column;
 }
+.jv-list-tags li{
+    color: #67b1b6;
+    font-weight: bold;
+    font-size: 16px;
+    background-color: transparent;
+    border: 2px solid #cd8d9f;
+    border-radius: 24px;
+    text-decoration: none;
+    padding: 0px 5px;
+    margin: 0px;
+    margin-right: 5px;
+    display: flex;
+    line-height: 20px;
+}
+.page-news .jv-list-img a{
+    display: block;
+    width: 260px;
+    height: 150px;
+    background-size: cover;
+    background-position: center;
+    animation-duration: 0.3s;
+    transition-duration: 0.3s;
+    border-radius: 6px;
+}
+.jv-list-body {
+    margin-left: 10px;
+}
+/* IMG */
