--- a/css/style.css
+++ b/css/style.css
@@ -1833,7 +1833,7 @@ strong {
     color: #67b1b6;
     font-weight: bold;
     font-size: 16px;
-    background-color: transparent;
+    background-color: white;
     border: 2px solid #cd8d9f;
     border-radius: 24px;
     text-decoration: none;
